# spin

./: Cargo.toml
crates/app/src/: lib.rs
crates/appconfig/: Cargo.toml
crates/appconfig/src/: lib.rs  provider.rs  template.rs  tests.rs  tree.rs
crates/appconfig/src/provider/: env.rs
crates/compose/: Cargo.toml
crates/compose/src/: composer.rs  isolate.rs  lib.rs
crates/config/: Cargo.toml
crates/factor-outbound-http/src/: wasi.rs
crates/loader/src/: local.rs
crates/locked-app/src/: locked.rs
crates/manifest/src/: compat.rs  normalize.rs
crates/manifest/src/schema/: v2.rs
crates/manifest/tests/ui/: normalization.json  normalization.toml  normalization.toml.norm
crates/oci/: Cargo.toml
crates/oci/src/: client.rs
crates/testing/src/: lib.rs
crates/trigger/: Cargo.toml
crates/trigger/src/: lib.rs  loader.rs
docs/content/sips/: 002-app-config.md
examples/component-imports/: handler.wasm  service.wasm  spin.toml
examples/component-imports2/: spin.toml
examples/component-imports2/greet/: Cargo.toml
examples/component-imports2/greet/wit/: world.wit
